<resources>
    <string name="app_name">VAD+ASR: Next-gen Kaldi</string>
    <string name="hint">Click the Start button to play speech-to-text with Next-gen Kaldi.
        \n
        \n\n\n
        The source code and pre-trained models are publicly available.
        Please see https://github.com/k2-fsa/sherpa-onnx for details.
        \n\n
        Speech recognition with Next-gen Kaldi using VAD and non-streaming ASR models.
    </string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="clear">Clear transcript</string>
    <string name="share">Share transcript</string>
    <string name="no_stats">No recording stats yet</string>
</resources>